--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -13,9 +13,11 @@
 .headerTitleSm {
     position: absolute;
     top: 18%;
-    font-size: 30px;
-    font-family: 'Lora', serif;
+    font-size: 40px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 300;
     color: #444;
+    font-style: inherit;
     
 
   }
